finally fixed spacing issues

--- a/profile/src/css/App.css
+++ b/profile/src/css/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+
 .App {
   text-align: center;
   background-image: linear-gradient(to bottom right, grey, grey, black);
@@ -6,6 +8,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.logo{
+  font-family: 'Odibee Sans', cursive;
 }
 
 .margined{
